# sns-sqs-microservices

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
helm/sns-sqs-microservices/: Chart.yaml  README.md  values.yaml
helm/sns-sqs-microservices/templates/: _helpers.tpl  configmap.yaml  deployment-notification.yaml  deployment-order-processing.yaml  deployment-producer.yaml  hpa-notification.yaml  hpa-order-processing.yaml  job-producer.yaml  pdb-notification.yaml  pdb-order-processing.yaml  service-notification.yaml  service-order-processing.yaml  service-producer.yaml  serviceaccount-notification.yaml  serviceaccount-order-processing.yaml  serviceaccount-producer.yaml
notification/: Dockerfile  app.py  pyproject.toml
order-processing/: Dockerfile  app.py  pyproject.toml
producer/: Dockerfile  app.py  pyproject.toml
scripts/: build-and-push.sh  setup-iam-roles.sh  sns-sqs-resources.json
scripts/iam-policies/: notification-policy.json  order-processing-policy.json  producer-policy.json
