[project]
name = "sns-sqs-producer"
version = "1.0.0"
description = "Producer service for SNS/SQS microservices demo"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.41.5",
    "prometheus-client==0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]

